# patinet_cs2_asistant

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  饰品id（更新时间2026-01-23）.txt
api脚本/: fetch_steamdt_base.py  steamdt_cs2_client.py  steamdt_cs2_client_usage.md
api脚本/文档离线版/: index.json
api脚本/文档离线版/html/: 154220434d0.html  154220435d0.html  154220436d0.html  154220437d0.html  154220438d0.html  154220439d0.html  154579830d0.html  154579831d0.html  154579832d0.html  155866058d0.html  155866059d0.html  155866060d0.html  155866061d0.html  157024915d0.html  157024916d0.html  157024917d0.html  157024918d0.html  157024919d0.html  157024920d0.html  157024921d0.html  157024922d0.html  182841349d0.html  182841350d0.html  182841351d0.html  273806087e0.html  273806088e0.html  273806089e0.html  273806090e0.html  278832830e0.html  278832831e0.html  278832832e0.html  319748133e0.html  6279815m0.html  6369437m0.html  index.html
docs/: 01_产品需求说明.md  02_API接口选型.md  03_待确认事项.md  04_Steam接口与SteamID清单.md  05_底仓执行口径.md  csgo进货表1111111.xlsx  使用日志.md  使用说明.md  后续需要增加.md  测试.md
src/cs2_assistant/: __main__.py  catalog.py  cli.py  config.py  db.py  models.py  utils.py
src/cs2_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cs2_assistant/accounts/: __init__.py  browser.py  steam_auth.py  store.py
src/cs2_assistant/clients/: __init__.py  (+5 more)
tests/: test_alerts.py  test_cli.py  test_executor_buy.py  test_executor_engine.py  test_market_service.py  test_strategy.py  test_t_yield_alerts.py  test_t_yield_reminder.py  test_t_yield_scan.py
(+12 files in other folders)
