[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-assistant"
version = "0.1.0"
description = "CS2 trading assistant for C5 and Steam"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
cs2-assistant = "cs2_assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

